--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -5,4 +5,4 @@ isv_auth_aes_key=xxxxxx
 isv_auth_token=xxxxxx
 
 # openapi online address
-isv_auth_base_path=https://openapi.upesn.com
+isv_auth_base_path=https://openapi.yonyoucloud.com/
